[package]
name = "spacial-learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tera = "1.8.0"
actix-web = "4"
rand = "0.7"
rust-argon2 = "0.5"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15.0"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres","chrono","r2d2","serde_json"] }

tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
tokio-postgres = "0.7.6"
regex = "1.3.1"
